[package]
name = "bevy_quicsilver"
version = "0.1.1"
authors = ["BigWingBeat"]
edition = "2021"
description = "Implementation of the QUIC transport protocol for bevy_ecs, using quinn_proto"
repository = "https://github.com/BigWingBeat/bevy_quicsilver"
license = "Apache-2.0"
keywords = ["bevy", "quic", "gamedev", "networking"]
categories = ["game-development", "network-programming"]

[dependencies]
bevy_app = { git = "https://github.com/BigWingBeat/bevy", branch = "ui_compile_error", default-features = false }
bevy_ecs = { git = "https://github.com/BigWingBeat/bevy", branch = "ui_compile_error", default-features = false }
bevy_time = { git = "https://github.com/BigWingBeat/bevy", branch = "ui_compile_error", default-features = false }
hashbrown = "0.14"
bytes = "1.6"
thiserror = "1.0"
quinn-proto = { version = "0.11", default-features = false, features = ["rustls"] }
quinn-udp = { version = "0.5", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "ring"] }
rcgen = { version = "0.13", default-features = false, features = ["crypto", "ring"] }

[features]
default = ["platform-verifier"]
platform-verifier = ["quinn-proto/platform-verifier"]

[dev-dependencies]
# For writing and reading self-signed certificates in examples
directories = "5.0"
ring = { version = "0.17", default-features = false }

# For client & server examples
bevy_state = { git = "https://github.com/BigWingBeat/bevy", branch = "ui_compile_error", default-features = false, features = [
	"bevy_app",
] }

# For digger demo example
bevy = { git = "https://github.com/BigWingBeat/bevy", branch = "ui_compile_error", default-features = false, features = [
	"x11",
	"bevy_winit",
	"bevy_ui",
	"bevy_state",
	"default_font",
] }
bevy_simple_text_input = { git = "https://github.com/rparrett/bevy_simple_text_input", branch = "bevy_main" }
# bevy_ecs_tilemap = { path = "../../bevy_ecs_tilemap" }
anyhow = "1.0"

[patch."https://github.com/bevyengine/bevy"]
bevy = { git = "https://github.com/BigWingBeat/bevy", branch = "ui_compile_error" }
# bevy = { path = "../bevy" }

# [patch."https://github.com/BigWingBeat/bevy"]
# bevy = { path = "../bevy" }
