[package]
name = "bevy_quicsilver"
version = "0.1.1"
authors = ["BigWingBeat"]
edition = "2021"
description = "Implementation of the QUIC transport protocol for bevy_ecs, using quinn_proto"
repository = "https://github.com/BigWingBeat/bevy_quicsilver"
license = "Apache-2.0"
keywords = ["bevy", "quic", "gamedev", "networking"]
categories = ["game-development", "network-programming"]

[dependencies]
bevy_app = { version = "0.15", default-features = false }
bevy_ecs = { version = "0.15", default-features = false }
bevy_time = { version = "0.15", default-features = false }
bevy_tasks = { version = "0.15", default-features = false, features = ["async-io"] }
async-io = "2.4"
crossbeam-channel = "0.5"
hashbrown = "0.15"
bytes = "1.9"
thiserror = "2.0"
quinn-proto = { version = "0.11", default-features = false, features = ["rustls"] }
quinn-udp = { version = "0.5", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "ring"] }
ring = { version = "0.17", default-features = false }
rcgen = { version = "0.13", default-features = false, features = ["crypto", "ring"] }
x509-parser = { version = "0.16", default-features = false }

[features]
default = ["platform_verifier"]
platform_verifier = ["quinn-proto/platform-verifier"]
multi_threaded = ["bevy_tasks/multi_threaded"]

[dev-dependencies]
# For writing and reading self-signed certificates in examples
directories = "5.0"

# For constructing a server certificate verifier in examples
rustls-platform-verifier = "0.4"

# For client & server examples
bevy_state = { version = "0.15", default-features = false, features = ["bevy_app"] }

# For digger demo example
bevy = { version = "0.15", default-features = false, features = ["x11", "bevy_winit", "bevy_ui", "bevy_state", "default_font"] }
bevy_simple_text_input = "0.10"
# bevy_ecs_tilemap = { path = "../../bevy_ecs_tilemap" }
anyhow = "1.0"
bincode = "1.3"
bytes-utils = "0.1"
serde = "1.0"
