[package]
name = "bevy_quicsilver"
version = "0.1.1"
authors = ["BigWingBeat"]
edition = "2021"
description = "Implementation of the QUIC transport protocol for bevy_ecs, using quinn_proto"
repository = "https://github.com/BigWingBeat/bevy_quicsilver"
license = "Apache-2.0"
keywords = ["bevy", "quic", "gamedev", "networking"]
categories = ["game-development", "network-programming"]

[dependencies]
# Core ecs dependencies
bevy_app = { version = "0.15", default-features = false }
bevy_ecs = { version = "0.15", default-features = false }
# For handling quic timeouts in ecs systems
bevy_time = { version = "0.15", default-features = false }
# For `TaskPoolPlugin`, to ensure task pools are initialized and ticked
bevy_core = { version = "0.15", default-features = false }
# For efficient socket reading in a task
bevy_tasks = { version = "0.15", default-features = false, features = ["async-io"] }
async-io = "2.4"
# For passing data from the aforementioned task into the ecs
crossbeam-channel = "0.5"
# Faster than std hashmap
hashbrown = "0.15"
# Part of quinn-proto's API, used for moving data around without copying
bytes = "1.9"
# Custom error types
thiserror = "2.0"
# Core dependency; sans-I/O implementation of QUIC
quinn-proto = { version = "0.11", default-features = false, features = ["rustls"] }
# For plugging actual I/O into aforementioned sans-I/O impl
quinn-udp = { version = "0.5", default-features = false }
# For crypto stuff
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "ring"] }
# For producing cert digests for TOFU verification
ring = { version = "0.17", default-features = false }
# For parsing cert validity for TOFU verification
x509-parser = { version = "0.16", default-features = false }
# For the helper method enabled by the rcgen_cert feature
rcgen = { version = "0.13", default-features = false, features = ["crypto", "ring"], optional = true }

[features]
default = ["platform_verifier"]
platform_verifier = ["quinn-proto/platform-verifier"]
rcgen_cert = ["dep:rcgen"]

[dev-dependencies]
# For generating self-signed certificates for tests and examples
rcgen = { version = "0.13", default-features = false, features = ["crypto", "ring"] }

# For writing and reading self-signed certificates in examples
directories = "5.0"

# For client & server examples
bevy_state = { version = "0.15", default-features = false, features = ["bevy_app"] }

# For digger demo example
bevy = { version = "0.15", default-features = false, features = [
	"x11",
	"bevy_winit",
	"bevy_ui",
	"bevy_state",
	"default_font",
	# "multi_threaded",
] }
bevy_simple_text_input = "0.10"
# bevy_ecs_tilemap = { path = "../../bevy_ecs_tilemap" }
anyhow = "1.0"
bincode = "1.3"
bytes-utils = "0.1"
serde = "1.0"
